Refactore response, Finalized Swagger 2.0
