# docs/swagger.json
@@ -9,6 +9,55 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/admin/product": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Returns all existing product",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Get all product",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AdminProductResponse"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.UnauthorizedResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.ForbiddenResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/admin/user": {
             "get": {
                 "security": [
@@ -123,9 +172,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/admin/user{id}": {
+            },
             "delete": {
                 "security": [
                     {
@@ -193,7 +240,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Retrieve all user's product by their unique id",
+                "description": "Returns all existing product",
                 "consumes": [
                     "application/json"
                 ],
@@ -203,7 +250,7 @@
                 "tags": [
                     "Admin"
                 ],
-                "summary": "Admin get all specific user's Product",
+                "summary": "Get all product",
                 "parameters": [
                     {
                         "type": "string",
@@ -219,7 +266,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.AdminProductResponse"
+                                "$ref": "#/definitions/models.UserProductResponse"
                             }
                         }
                     },
@@ -731,7 +778,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@gmail.com"
+                    "example": "john@example.com"
                 },
                 "id": {
                     "type": "string",
@@ -795,7 +842,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@gmail.com"
+                    "example": "john@example.com"
                 },
                 "password": {
                     "type": "string",
@@ -875,7 +922,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@gmail.com"
+                    "example": "john@example.com"
                 },
                 "name": {
                     "type": "string",
@@ -892,7 +939,7 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "example": "john@gmail.com"
+                    "example": "john@example.com"
                 },
                 "id": {
                     "type": "string",
